--- a/docs/setup/00.K8S_multi-master_deployment.md
+++ b/docs/setup/00.K8S_multi-master_deployment.md
@@ -1,69 +1,86 @@
-## Kube  multi-master deployment
+# K8S Multi-master Deployment
 
-##### 快速部署: (Centos 7)
+### The cluster is introduced: (Centos 7)
 
-| Name       | Note          |                         |
-| ---------- | ------------- | ----------------------- |
-| OS         | Centos 7      | DisK > 30G ,Memory > 2G |
-| ansible    | version 2.7.7 |                         |
-| docker     | 17.03.2       |                         |
-| kubernetes | 1.13.3        |                         |
-| etcd       | V3.2.24       | 奇数{1,3,5…}个节点      |
-|            |               |                         |
+| Name           | Version                               |
+| -------------- | ------------------------------------- |
+| OS             | Centos 7                              |
+| ansible        | version 2.7.7                         |
+| docker         | 18.06.3-ce                            |
+| kubernetes     | 1.13.3                                |
+| etcd           | V3.2.24                               |
+| docker-compose | 1.23.0                                |
+| cfssl          | R1.2 {cfssl,cfssljson,cfssl-certinfo} |
+| CNI            | V0.6.0                                |
+| Network        | Flannel                               |
 
-#### 1.Install depend 
+#### 1.0 Environmental planning 
+
+| Role   | Amount | Introduction                 |
+| ------ | ------ | ---------------------------- |
+| Hosts  | 4      |                              |
+| deploy | 1      | install k8s cluster Executor |
+| etcd   | 3      | {1,3,5…} An odd number       |
+| master | 2      | Apiserver                    |
+| node   | 2      | Work node                    |
+| lb     | 2      | Haproxy + keepalived         |
+
+#### 1.1 Install depend 
 
 ```sh
-# 安装epel源
+# isntall epel
 $ yum install epel-release -y
-# 安装依赖工具
+# install Depend on the tool
 $ yum install git python python-pip -y
 ```
 
 #### 2.Install ansible
 
 ```shell
-#安装ansible 
-#pip install ansible
+# install ansible 
+# pip install ansible
 $ pip install pip --upgrade -i http://mirrors.aliyun.com/pypi/simple/ --trusted-host mirrors.aliyun.com
-
 $ pip install --no-cache-dir ansible -i http://mirrors.aliyun.com/pypi/simple/ --trusted-host mirrors.aliyun.com
 ```
 
 #### 3.Ansible K8S deploy
 
 ```shell
-#1.download project 
+# 1.download project 
 $ git clone https://github.com/uxun/kube.git
 $ mkdir -p /etc/ansible
 $ mv kube/* /etc/ansible
 
-#2.download Binaries (You need a network environment) 
-$ cd down/
+# 2.download Binaries (You need a network environment) 
+$ cd /etc/ansible/down/
+$ chmod +x download.sh
 $ ./download.sh 
-#----download {k8s,etcd,docker,cfss,docker-compose,cni...}
+#----You must download the script first 
 
-#3.配置ansible ssh密钥登陆
+# 3.Configure key login
 # $IP = {clusters IP} 
-ssh-keygen -t rsa -b 2048
-ssh-copy-id $IP 
+$ ssh-keygen -t rsa -b 2048
+$ ssh-copy-id -i ~/.ssh/id_rsz.pub $IP 
 ```
 
 #### 4.Configure the cluster
 
 ```shell
+# modify hosts
 $ cd /etc/ansible && cp example/hosts.m-masters.example hosts
-# alter IP and other
+# alter IP and other 
 $ vim /etc/ansible/hosts
+
 # verify
 $ ansible all -m ping 
-# A step
-ansible-playbook 01.prepare.yml
-ansible-playbook 02.etcd.yml
-ansible-playbook 03.docker.yml
-ansible-playbook 04.kube-master.yml
-ansible-playbook 05.kube-node.yml
-ansible-playbook 06.network.yml
-ansible-playbook 07.cluster-addon.yml
+# A step 
+# cd /etc/ansible
+$ ansible-playbook 01.prepare.yml
+$ ansible-playbook 02.etcd.yml
+$ ansible-playbook 03.docker.yml
+$ ansible-playbook 04.kube-master.yml
+$ ansible-playbook 05.kube-node.yml
+$ ansible-playbook 06.network.yml
+$ ansible-playbook 07.cluster-addon.yml
 ```
 
