--- a/docs/setup/01.Hosts_environment_preparation.md
+++ b/docs/setup/01.Hosts_environment_preparation.md
@@ -2,7 +2,7 @@
 
 ## 1.Installation
 
-$ ansible-playbook ⌘+ [01.prepare.yml](../../01.prepare.yml)
+##### $ ansible-playbook  [01.prepare.yml](../../01.prepare.yml)
 
 ```shell
 # Role of application
