--- a/docs/setup/02.Install_ETCD_cluster.md
+++ b/docs/setup/02.Install_ETCD_cluster.md
@@ -2,6 +2,8 @@
 
 kuberntes 系统使用 etcd 存储所有数据， etcd集群只能有奇数个节点(1,3,5...)。
 
+##### $ ansible-playbook [02.etcd.yml](../../02.etcd.yml)
+
 ```shell
 roles/etcd
 ├── clean-etcd.yml
@@ -14,9 +16,9 @@ roles/etcd
     └── etcd.service.j2
 ```
 
-### 1.Download [binary file](https://github.com/etcd-io/etcd/releases) 
+## 1.Download [binary file](https://github.com/etcd-io/etcd/releases) 
 
-### 2.Certificate of configuration
+## 2.Certificate of configuration ⌘+ [etcd-csr.json.j2](../../roles/etcd/templates/etcd-csr.json.j2)
 
 Hosts文件中必须指定etcd节点ip，
 
@@ -52,7 +54,7 @@ cd /etc/etcd/ssl && {{ bin_dir }}/cfssl gencert \
         -profile=kubernetes etcd-csr.json | {{ bin_dir }}/cfssljson -bare etcd
 ```
 
-####  2.2 Create the etcd service file
+####  2.2 Create the etcd service file ⌘+ [etcd.service.j2](../../roles/etcd/templates/etcd.service.j2)
 
 <!--注意{{ }}中的参数与ansible hosts文件中设置对应-->
 
