--- a/docs/setup/01.Hosts_environment_preparation.md
+++ b/docs/setup/01.Hosts_environment_preparation.md
@@ -2,7 +2,7 @@
 
 ## 1.Installation
 
-##### $ ansible-playbook  [01.prepare.yml](../../01.prepare.yml)
+##### $ ansible-playbook [01.prepare.yml](../../01.prepare.yml)
 
 ```shell
 # Role of application
@@ -179,8 +179,8 @@ Create the kube-proxy certificate request
   "names": [
     {
       "C": "CN",
-      "ST": "HangZhou",
-      "L": "XS",
+      "ST": "Shenzhen",
+      "L": "GS",
       "O": "k8s",
       "OU": "System"
     }
