--- a/docs/setup/03.Install_Docker.md
+++ b/docs/setup/03.Install_Docker.md
@@ -98,16 +98,18 @@ $ docker info
 
 `iptables-save|grep FORWARD` 查看 iptables filter表 FORWARD链，最后要有一个 `-A FORWARD -j ACCEPT` 保底允许规则
 
-> iptables-save|grep FORWARD
-> :FORWARD ACCEPT [0:0]
-> :FORWARD DROP [0:0]
-> -A FORWARD -j DOCKER-USER
-> -A FORWARD -j DOCKER-ISOLATION
-> -A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-> -A FORWARD -o docker0 -j DOCKER
-> -A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-> -A FORWARD -i docker0 -o docker0 -j ACCEPT
-> -A FORWARD -j ACCEPT
+```shell
+iptables-save|grep FORWARD
+:FORWARD ACCEPT [0:0]
+:FORWARD DROP [0:0]
+-A FORWARD -j DOCKER-USER
+-A FORWARD -j DOCKER-ISOLATION
+-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
+-A FORWARD -o docker0 -j DOCKER
+-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
+-A FORWARD -i docker0 -o docker0 -j ACCEPT
+-A FORWARD -j ACCEPT
+```
 
 
 
