Docs kube-master

--- a/docs/setup/02.Install_ETCD_cluster.md
+++ b/docs/setup/02.Install_ETCD_cluster.md
@@ -56,9 +56,9 @@ cd /etc/etcd/ssl && {{ bin_dir }}/cfssl gencert \
 
 ####  2.2 Create the etcd service file ⌘+ [etcd.service.j2](../../roles/etcd/templates/etcd.service.j2)
 
-<!--注意{{ }}中的参数与ansible hosts文件中设置对应-->
+<u>注意{{ }}中的参数与ansible hosts文件中设置对应</u>
 
-<!--注意etcd 即需要服务器证书也需要客户端证书，这里为方便使用一个peer 证书代替两个证书-->
+<u>注意etcd 即需要服务器证书也需要客户端证书，这里为方便使用一个peer 证书代替两个证书</u>
 
 ``` shell
 [Unit]
