--- a/docs/setup/04.Install_Kube-master.md
+++ b/docs/setup/04.Install_Kube-master.md
@@ -25,8 +25,8 @@ Kubernetes master
 | component          | role                                                         | function                                                     |
 | ------------------ | ------------------------------------------------------------ | ------------------------------------------------------------ |
 | apiserver          | 提供集群管理的REST API接口，包括认证授权、数据校验以及集群状态变更等。 | 提供HTTP Rest 接口的关键服务进程，kubernetes 里所有资源的增，删，查，改，唯一路口，也是集群控制的入口程序 |
-| scheduler          | 负责资源调度（Pod调度）的进程，相当于地铁的调度室            | 1.监听kube-apiserver，查询还未分配Node的Pod 2.根据调度策略为这些Pod分配节点 |
-| controller-manager | 负责资源对象的自动化控制中心，可理解为资源对象的“大总管”     | 它通过apiserver监控整个集群的状态，并确保集群处于预期的工作状态 |
+| scheduler          | 负责资源调度（Pod调度）的进程，相当于地铁的调度室            | 为应用的每个可部署组件分配一个工作节点                       |
+| controller-manager | 负责资源对象的自动化控制中心，可理解为资源对象的“大总管”     | 它通过apiserver监控整个集群的状态，并确保集群处于预期的工作状态，复制组件，持续跟踪工作节点，处理节点失败等 |
 
 请在另外窗口打开[roles/kube-master/tasks/main.yml](../../roles/kube-master/tasks/main.yml) 文件，对照看以下讲解内容。
 
