--- a/docs/setup/07.Install_Cluster-Addons.md
+++ b/docs/setup/07.Install_Cluster-Addons.md
@@ -46,7 +46,7 @@ roles/cluster-addon
 
     `$ kubectl apply -f /opt/kube/kube-system/{{ dns_backend }}`
 
-#### 1.1.2 metric-server
+#### 1.1.2 Metrics-Server
 
 1. 判断变量{{ metricsserver_offline }}是否有离线镜像导入docker images 
 
@@ -59,7 +59,7 @@ roles/cluster-addon
 
 3. 通过 kuberctl apply -f /etc/ansible/manifests/metrics-server 直接部署
 
-#### 1.1.3 dashboard
+#### 1.1.3 Dashboard
 
 1. 判断变量{{ dashboard_offline }}是否有离线镜像后，导入docker images 
 
