--- a/docs/setup/00.K8S_multi-master_deployment.md
+++ b/docs/setup/00.K8S_multi-master_deployment.md
@@ -2,17 +2,22 @@
 
 ### The cluster is introduced: (Centos 7)
 
-| Name           | Version                               |
-| -------------- | ------------------------------------- |
-| OS             | Centos 7                              |
-| ansible        | version 2.7.7                         |
-| docker         | 18.06.3-ce                            |
-| kubernetes     | 1.13.3                                |
-| etcd           | V3.2.24                               |
-| docker-compose | 1.23.0                                |
-| cfssl          | R1.2 {cfssl,cfssljson,cfssl-certinfo} |
-| CNI            | V0.6.0                                |
-| Network        | Flannel                               |
+| Name           | Version                                                      |
+| -------------- | ------------------------------------------------------------ |
+| OS             | Centos 7                                                     |
+| ansible        | version 2.7.7                                                |
+| docker         | [18.06.3-ce](https://download.docker.com/linux/static/stable/x86_64/) |
+| kubernetes     | [1.13.3](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG-1.13.md#server-binaries-1) |
+| etcd           | [V3.2.24](https://github.com/etcd-io/etcd/releases/tag/v3.2.24) |
+| docker-compose | [1.23.0](https://github.com/docker/compose/releases/tag/1.23.0) |
+| cfssl          | [R1.2](https://pkg.cfssl.org/) {cfssl,cfssljson,cfssl-certinfo} |
+| CNI            | [V0.6.0](https://github.com/containernetworking/cni/releases) |
+| Network        | [flannel-v0.11.0](https://github.com/coreos/flannel/releases) |
+| DNS            | [coredns_1.2.6](https://github.com/coredns/coredns/releases/tag/v1.2.6) \| kubedns_1.14.13 |
+| Dashboard      | [v1.10.0](https://github.com/kubernetes/dashboard/releases/tag/v1.10.0) |
+| Heapster       | [v1.5.4](https://github.com/kubernetes/kubernetes/tree/master/cluster/addons/cluster-monitoring) |
+| Harbor         | [V1.6.3](https://github.com/goharbor/harbor/releases/tag/v1.6.3) |
+| Metrics-server | [V0.3.1](https://github.com/kubernetes/kubernetes/tree/214efa9cc4f909254d8eab1025b1f0549615bb41/cluster/addons/metrics-server) |
 
 #### 1.0 Environmental planning 
 
