--- a/docs/setup/00.K8S_multi-master_deployment.md
+++ b/docs/setup/00.K8S_multi-master_deployment.md
@@ -22,6 +22,8 @@
 | Heapster       | [v1.5.4](https://github.com/kubernetes/kubernetes/tree/master/cluster/addons/cluster-monitoring) image |
 | Harbor         | [V1.6.3](https://github.com/goharbor/harbor/releases/tag/v1.6.3) |
 | Metrics-server | [V0.3.1](https://github.com/kubernetes/kubernetes/tree/214efa9cc4f909254d8eab1025b1f0549615bb41/cluster/addons/metrics-server) image |
+| Grafana        | v4.4.3 image                                                 |
+| Influxdb       | v1.3.3 image                                                 |
 
 #### 1.0 Environmental planning 
 
