fix 06.network error

--- a/docs/setup/00.K8S_multi-master_deployment.md
+++ b/docs/setup/00.K8S_multi-master_deployment.md
@@ -76,9 +76,9 @@ $ ./download.sh
 	harbor-offline
 
 # 3.Configure key login
-# $IP = {clusters IP} 
+# $IP = {clusters IP} All
 $ ssh-keygen -t rsa -b 2048
-$ ssh-copy-id -i ~/.ssh/id_rsz.pub $IP 
+$ ssh-copy-id -i ~/.ssh/id_rsa.pub $IP 
 ```
 
 #### 4.Configure the cluster
