Update the deployment file

--- a/docs/setup/00.K8S_multi-master_deployment.md
+++ b/docs/setup/00.K8S_multi-master_deployment.md
@@ -58,9 +58,7 @@ $ pip install --no-cache-dir ansible -i http://mirrors.aliyun.com/pypi/simple/ -
 
 ```shell
 # 1.download project 
-$ git clone https://github.com/uxun/kube.git
-$ mkdir -p /etc/ansible
-$ mv kube/* /etc/ansible
+$ git clone --depth=1 https://github.com/uxun/kube.git /etc/ansible
 
 # 2.download Binaries (You need a network environment) 
 $ cd /etc/ansible/down/
@@ -77,7 +75,7 @@ $ ./download.sh
 
 # 3.Configure key login
 # $IP = {clusters IP} All
-$ ssh-keygen -t rsa -b 2048
+$ ssh-keygen -t rsa -b 2048 -N '' -f ~/.ssh/id_rsa
 $ ssh-copy-id -i ~/.ssh/id_rsa.pub $IP 
 ```
 
