Dashboard enable Basic authentication

--- a/docs/setup/04.Install_Kube-master.md
+++ b/docs/setup/04.Install_Kube-master.md
@@ -30,6 +30,10 @@ Kubernetes master
 
 请在另外窗口打开[roles/kube-master/tasks/main.yml](../../roles/kube-master/tasks/main.yml) 文件，对照看以下讲解内容。
 
+### Dashboard 基础认证开启
+
+当前如需创建基础认证，需单独修改roles/kube-master/defaults/main.yml文件，将BASIC_AUTH_ENABLE改为yes，并相应配置用户名BASIC_AUTH_USER（默认用户名为admin）及密码BASIC_AUTH_PASS。
+
 ## 2.Certificate of configuration 
 
 ##### ⌘+ [kubernetes-csr.json.j2](../../roles/kube-master/templates/kubernetes-csr.json.j2)
