--- a/docs/setup/01.Hosts_environment_preparation.md
+++ b/docs/setup/01.Hosts_environment_preparation.md
@@ -23,8 +23,8 @@ roles/deploy/
 └── templates
     ├── admin-csr.json.j2	# kubectl客户端使用的证书请求模板
     ├── ca-config.json.j2	# ca 配置文件模板
-    ├── ca-csr.json.j2	# ca 证书签名请求模板
-    ├── read-csr.json.j2	# 只读
+    ├── ca-csr.json.j2   	# ca 证书签名请求模板
+    ├── read-csr.json.j2	# read only
     └── kube-proxy-csr.json.j2	# kube-proxy使用的证书请求模板
 ```
 
@@ -62,7 +62,7 @@ CloudFlare 的 PKI 工具集生成自签名的 CA 证书，用来签名后续创
     "profiles": {	#包含了`server auth`和`client auth`，所以可以签发三种不同类型证书；
       "kubernetes": {
         "usages": [
-            "signing",
+            "signing", # 表示该证书可用于签名其他证书，生成的 ca.pem 证书中 CA=TRUE;
             "key encipherment",
             "server auth",	#表示可以用该 CA 对 server 提供的证书进行验证；
             "client auth"	#表示可以用该 CA 对 client 提供的证书进行验证；
@@ -75,10 +75,11 @@ CloudFlare 的 PKI 工具集生成自签名的 CA 证书，用来签名后续创
 ```
 
 #### 2.3 Create CA Certificate signature request ⌘+ [ca-csr.json.j2](../../roles/deploy/templates/ca-csr.json.j2)
+> kube-apiserver 将提取的 User、Group 作为 RBAC 授权的用户标识；
 
 ```yaml
 {
-  "CN": "kubernetes",
+  "CN": "kubernetes", # kube-apiserver 从证书中提取该字段作为请求的User name, 
   "key": {
     "algo": "rsa",
     "size": 2048
@@ -88,7 +89,7 @@ CloudFlare 的 PKI 工具集生成自签名的 CA 证书，用来签名后续创
       "C": "CN",
       "ST": "Shenzhen",
       "L": "GS",
-      "O": "k8s",
+      "O": "k8s", # kube-apiserver 从证书中提取该字段作为请求用户的所属Group;
       "OU": "System"
     }
   ],
@@ -111,7 +112,7 @@ kubectl 使用 ~/.kube/config 配置文件与kube-apiserver进行交互，且拥
 ``` yaml
 {
   "CN": "admin",
-  "hosts": [],	# kubectl 使用客户端证书可以不指定hosts 字段
+  "hosts": [],	# 不指定 hosts 字段,该证书只会被 kubectl 当做 client 证书使用
   "key": {
     "algo": "rsa",
     "size": 2048
@@ -127,9 +128,9 @@ kubectl 使用 ~/.kube/config 配置文件与kube-apiserver进行交互，且拥
   ]
 }
 ```
-###### example："O": "system:masters"
+#### example："O": "system:masters"
 
-``` bash
+```shell
 $ kubectl describe clusterrolebinding cluster-admin
 Name:         cluster-admin
 Labels:       kubernetes.io/bootstrapping=rbac-defaults
@@ -244,7 +245,7 @@ roles/prepare
 
 ⌘ + [roles/lb/tasks/main.yml](../../roles/lb/tasks/main.yml) Task
 
-``` bash
+```shell
 roles/lb
 ├── defaults
 │   └── main.yml
