--- a/docs/setup/02.Install_ETCD_cluster.md
+++ b/docs/setup/02.Install_ETCD_cluster.md
@@ -60,6 +60,8 @@ cd /etc/etcd/ssl && {{ bin_dir }}/cfssl gencert \
 
 <u>注意etcd 即需要服务器证书也需要客户端证书，这里为方便使用一个peer 证书代替两个证书</u>
 
+> --advertise-client-urls [link](https://etcd.readthedocs.io/en/latest/faq.html?highlight=advertise-client-urls#configuration)
+
 ``` shell
 [Unit]
 Description=Etcd Server
@@ -73,19 +75,19 @@ Type=notify
 WorkingDirectory=/var/lib/etcd/
 ExecStart={{ bin_dir }}/etcd \
   --name={{ NODE_NAME }} \
-  --cert-file=/etc/etcd/ssl/etcd.pem \
+  --cert-file=/etc/etcd/ssl/etcd.pem \ # etcd server 与 client 通信时使用的证书和私钥
   --key-file=/etc/etcd/ssl/etcd-key.pem \
-  --peer-cert-file=/etc/etcd/ssl/etcd.pem \
+  --peer-cert-file=/etc/etcd/ssl/etcd.pem \  # etcd 与 peer 通信使用的证书和私钥
   --peer-key-file=/etc/etcd/ssl/etcd-key.pem \
-  --trusted-ca-file={{ ca_dir }}/ca.pem \
-  --peer-trusted-ca-file={{ ca_dir }}/ca.pem \
+  --trusted-ca-file={{ ca_dir }}/ca.pem \  # 签名 client 证书的 CA 证书，用于验证 client 证书
+  --peer-trusted-ca-file={{ ca_dir }}/ca.pem \  # 签名 peer 证书的 CA 证书，用于验证 peer 证书
   --initial-advertise-peer-urls=https://{{ inventory_hostname }}:2380 \
   --listen-peer-urls=https://{{ inventory_hostname }}:2380 \
   --listen-client-urls=https://{{ inventory_hostname }}:2379,http://127.0.0.1:2379 \
-  --advertise-client-urls=https://{{ inventory_hostname }}:2379 \
+  --advertise-client-urls=https://{{ inventory_hostname }}:2379 \  
   --initial-cluster-token=etcd-cluster-0 \
   --initial-cluster={{ ETCD_NODES }} \
-  --initial-cluster-state=new \
+  --initial-cluster-state=new \   # 当 --initial-cluster-state 值为 new 时，--name 的参数值必须位于 --initial-cluster 列表中
   --data-dir=/var/lib/etcd
 Restart=on-failure
 RestartSec=5
