--- a/docs/setup/00.K8S_Deployment.md
+++ b/docs/setup/00.K8S_Deployment.md
@@ -38,7 +38,7 @@ $ yum install epel-release -y
 $ yum install git python python-pip expect -y
 # pip install ansible
 $ pip install pip --upgrade -i http://mirrors.aliyun.com/pypi/simple/ --trusted-host mirrors.aliyun.com
-$ pip install --no-cache-dir ansible -i http://mirrors.aliyun.com/pypi/simple/ --trusted-host mirrors.aliyun.com
+$ pip install ansible==2.6.12 -i http://mirrors.aliyun.com/pypi/simple/ --trusted-host mirrors.aliyun.com
 ```
 
 Ubuntu
@@ -81,7 +81,7 @@ $ ./download.sh
 
 > **1.免密登录** 
 >
-> `cd /etc/ansible && tools/ssh-key-copy.sh hosts root pd`
+> `cd /etc/ansible && tools/ssh-key-copy.sh hosts root passwd`
 > `$ ssh-keygen -t rsa -b 2048 -N '' -f ~/.ssh/id_rsa`
 > `$ ssh-copy-id -i ~/.ssh/id_rsa.pub $IP` 
 >
