--- a/docs/setup/02.Install_ETCD_cluster.md
+++ b/docs/setup/02.Install_ETCD_cluster.md
@@ -1,50 +1,22 @@
 # 02.Install_ETCD
 
-kuberntes 系统使用 etcd 存储所有数据， etcd集群只能有奇数个节点(1,3,5...)。
+> kuberntes 系统使用 etcd 存储所有数据， etcd集群只能有奇数个节点(1,3,5...)。
+>
+> 节点：etcd
 
-##### $ ansible-playbook [02.etcd.yml](../../02.etcd.yml)
+### OVERVIEW
 
-```shell
-roles/etcd
-├── clean-etcd.yml
-├── defaults
-│   └── main.yml
-├── tasks
-│   └── main.yml 
-└── templates
-    ├── etcd-csr.json.j2
-    └── etcd.service.j2
-```
+##### `$ ansible-playbook` [02.etcd.yml](../../02.etcd.yml)
 
-## 1.Download [binary file](https://github.com/etcd-io/etcd/releases) 
+1.Download [binary file](https://github.com/etcd-io/etcd/releases) 
 
-## 2.Certificate of configuration ⌘+ [etcd-csr.json.j2](../../roles/etcd/templates/etcd-csr.json.j2)
+2.Create etcd CA
 
-Hosts文件中必须指定etcd节点ip，
+3.Create a configuration file
 
-``` json
-{
-  "CN": "etcd",
-  "hosts": [
-    "127.0.0.1",
-    "{{ inventory_hostname }}"
-  ],
-  "key": {
-    "algo": "rsa",
-    "size": 2048
-  },
-  "names": [
-    {
-      "C": "CN",
-      "ST": "Shenzhen",
-      "L": "GS",
-      "O": "k8s",
-      "OU": "System"
-    }
-  ]
-}
-```
-#### 2.1 Create the certificate and private key
+------
+
+### 1.Create the certificate and private key
 
 ``` bash
 cd /etc/etcd/ssl && {{ bin_dir }}/cfssl gencert \
@@ -54,11 +26,7 @@ cd /etc/etcd/ssl && {{ bin_dir }}/cfssl gencert \
         -profile=kubernetes etcd-csr.json | {{ bin_dir }}/cfssljson -bare etcd
 ```
 
-####  2.2 Create the etcd service file ⌘+ [etcd.service.j2](../../roles/etcd/templates/etcd.service.j2)
-
-<u>注意{{ }}中的参数与ansible hosts文件中设置对应</u>
-
-<u>注意etcd 即需要服务器证书也需要客户端证书，这里为方便使用一个peer 证书代替两个证书</u>
+###  2.Create the etcd service file [etcd.service.j2](../../roles/etcd/templates/etcd.service.j2)
 
 > --advertise-client-urls [link](https://etcd.readthedocs.io/en/latest/faq.html?highlight=advertise-client-urls#configuration)
 
@@ -96,13 +64,13 @@ LimitNOFILE=65536
 [Install]
 WantedBy=multi-user.target
 ```
-#### 2.3 Start the etcd service
+### 3.Start the etcd service
 
 ``` bash
 $ systemctl daemon-reload && systemctl enable etcd && systemctl start etcd
 ```
 
-#### 2.4 Verify the status
+### 4.Verify the status
 
 ```shell
 # 查看服务状态
