--- a/docs/setup/03.Install_Docker.md
+++ b/docs/setup/03.Install_Docker.md
@@ -1,28 +1,24 @@
 # 03.Install_Docker
 
-## 1.Roles 
+> 二进制安装Docker，docker version  > 18.09.x 二进制版本名称有变化
+>
+> 节点：ALL
 
-##### $ ansible-playbook [03.docker.yml](../../03.docker.yml)
+### OVERVIEW
 
-docker version  > 18.09.x 二进制版本名称有变化
+##### `$ ansible-playbook` [03.docker.yml](../../03.docker.yml)
 
-``` shell
-roles/docker
-├── defaults
-│   └── main.yml #{镜像加速，docker log，容器存储}
-├── files
-│   ├── docker
-│   └── docker-tag
-├── tasks
-│   └── main.yml #{mkdir dir,dowload binary file,}
-└── templates
-    ├── daemon.json.j2
-    └── docker.service.j2
-```
+1.Dowlaod [Docker](https://download.docker.com/linux/static/stable/x86_64/)
 
-## 2. Docker service unit 
+2.Create a configuration file
 
-##### ⌘+ [docker.service.j2](../../roles/docker/templates/docker.service.j2)
+------
+
+### 1. Docker service unit 
+
+> docker 从 1.13 版本开始，将`iptables` 的`filter` 表的`FORWARD` 链的默认策略设置为`DROP`，从而导致 ping 其它 Node 上的 Pod IP 失败，因此必须在 `filter` 表的`FORWARD` 链增加一条默认允许规则 `iptables -I FORWARD -s 0.0.0.0/0 -j ACCEPT`
+
+vim /etc/systemd/system/docker.service
 
 ``` bash
 [Unit]
@@ -45,16 +41,16 @@ KillMode=process
 [Install]
 WantedBy=multi-user.target
 ```
-### 3.Configure docker image acceleration 
+### 2.Configure docker image acceleration 
 
-##### Defaults ⌘+ [variable](../../roles/docker/defaults/main.yml)
-
-##### Templates ⌘+ [daemon.json](../../roles/docker/templates/daemon.json.j2)
+> 配置镜像加速
+>
+> vim /etc/docker/daemon.json
 
 ``` json
 # defaults 中定义的变量 
 {
-  "registry-mirrors": ["https://registry.docker-cn.com"],
+  "registry-mirrors": ["https://docker.mirrors.ustc.edu.cn"],
   "max-concurrent-downloads": 10,
   "log-driver": "json-file",
   "log-level": "warn",
@@ -65,15 +61,9 @@ WantedBy=multi-user.target
 }
 ```
 
-### 4.Clean iptables
+### 3.Clean iptables
 
-| network                       |                                                         |
-| ----------------------------- | ------------------------------------------------------- |
-| Calico                        | network-policy,calico-kube-controllers使用 iptables规则 |
-| Kube-proxy                    | 使用 iptables规则                                       |
-| UFW(Ubuntu),Firewalld(CentOS) | Disable                                                 |
-
-防火墙最好直接卸载，避免不必要的冲突。
+> 避免不必要的冲突。
 
 ``` shell
 iptables -F && iptables -X \
@@ -81,13 +71,13 @@ iptables -F && iptables -X \
         && iptables -F -t raw && iptables -X -t raw \
         && iptables -F -t mangle && iptables -X -t mangle
 ```
-### 5.Start docker
+### 4.Start docker
 
 ``` bash
 $ systemctl daemon-reload && systemctl enable docker && systemctl start docker
 ```
 
-### 5.1 Validation
+Validation
 
 ```shell
 $ systemctl status docker 	# 服务状态
@@ -111,9 +101,7 @@ iptables-save|grep FORWARD
 -A FORWARD -j ACCEPT
 ```
 
-
-
-### 6.可选-安装docker查询镜像 tag的小工具
+### 5.可选-安装docker查询镜像 tag的小工具
 
 docker官方目前没有提供在命令行直接查询某个镜像的tag信息的方式，网上找来一个脚本工具，使用很方便。
 
